ChangeLog:

nxagent-3.2.0-5

- Fixed TR04F02044. Restored the original MakeRootTile() function in
  order to create the root window background pixmap.

- Fixed TR04F02041. Gnome panels stayed on top of the NX session win-
  dow with desktops running Compiz. This fix provides a solution for
  the Fullscreen mode.

- Improved for the shadow session the handling of master session win-
  dow resize.

nxagent-3.2.0-4

- Fixed TR10D01535. The agent window is not minimized anymore when
  pointer leaves.

- Changes aimed to avoid possible type mismatch in XDisplay struct
  on 64 bit architectures.

nxagent-3.2.0-3

- Fixed a build issue on Solaris.

nxagent-3.2.0-2

- Code clean up. Moved a variable definition to the beginnning of a
  block.

nxagent-3.2.0-1

- Opened the 3.2.0 branch based on nxagent-3.1.0-9.

nxagent-3.1.0-9

- Fixed TR03F02025. German umlauts couldn't be pasted into a remote
  Windows application. Now also the UTF8_STRING target is available
  for ConvertSelection requests.

- Fixed TR03F02031. Moved SetScreenSaverTimer() call in order to avoid
  undesired reset of the auto-disconnect timeout when a screen saver
  turns on.

nxagent-3.1.0-8

- Added reference to fixed TR02F02007 and TR07E01762 in the CHANGELOG.

- Set the GC trap before calling fbPolySegment.

- Fixed TR09E01863. A flag is set if a resource has been added or fre-
  ed and it is checked in FindClientResourcesByType().

- Added void entries to nxagentRequestLiteral vector in order to avoid
  a wrong string is printed to the output for NoOperation request.

- Fixed TR11E01948. Now keyboard status is initialized again after
  the NX session is reconnected. This avoids CAPS LOCK and NUM LOCK
  synchronization problems.

- Added nxagentXkbCapsTrap and nxagentXkbNumTrap to avoid CAPS LOCK
  and NUM LOCK synchronization problems when CAPS LOCK or NUM LOCK is
  the first key to be pressed in the NX session.

- Corrected subSize variable initialization in nxagentRealizeImage().
